<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single"
        android:id="@+id/group_home">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
    </group>
    <group android:checkableBehavior="single"
    android:id="@+id/group_map">
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map"
            android:title="@string/menu_map" />
    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/group_species">
        <item
            android:id="@+id/nav_sightings"
            android:icon="@drawable/spotted"
            android:title="@string/menu_sightings" />
        <item
            android:id="@+id/nav_species_list"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_species" />
    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/group2">
    <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_feedback" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_about"
                android:title="@string/menu_about" />
    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/group_ar">
        <item
            android:id="@+id/nav_ar"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_ar" />
    </group>

</menu>
