...
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/email_input"
                android:textColor="@color/login_button"
                android:hint="@string/fui_email_hint"
                android:inputType="textEmailAddress"
                style="@android:style/TextAppearance.DeviceDefault.Medium"/>

        </com.google.android.material.textfield.TextInputLayout>

...
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/password_input"
                android:textColor="@color/login_button"
                android:hint="@string/fui_password_hint"
                android:inputType="textPassword"
                style="@android:style/TextAppearance.DeviceDefault.Medium"/>

        </com.google.android.material.textfield.TextInputLayout>
...
